Tested data binding directly through a controller to a directive. Next working on service....

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
 <body>
 
   <div ng-controller="dataMapsCtrl">
-    <world-map></world-map>
+    <world-map countries="countries"></world-map>
   </div>
 
   <!--[if lt IE 7]>
