Added service and methods of watching scope so map automatically redraws on data change.

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,8 @@
 <body>
 
   <div ng-controller="dataMapsCtrl">
-    <world-map countries="countries"></world-map>
+    <world-map countries="countriesData"></world-map>
+    <button ng-click="colourGbr()">Such colour</button>
   </div>
 
   <!--[if lt IE 7]>
