--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,10 @@
     <button ng-click="colourGbr()">Such colour</button>
   </div>
 
+  <div class="happy-container">
+    <div colour-slider></div>
+  </div>
+
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
