--- a/app/index.html
+++ b/app/index.html
@@ -24,8 +24,8 @@
     <button ng-click="colourGbr()">Such colour</button>
   </div>
 
-  <div class="happy-container">
-    <div colour-slider></div>
+  <div ng-controller="sliderCtrl">
+    <div colour-slider time-axis-position="timeAxisPosition"></div>
   </div>
 
   <!--[if lt IE 7]>
