Made everything fit on a page without scrolling. SO EXCITE

--- a/app/index.html
+++ b/app/index.html
@@ -19,9 +19,8 @@
 </head>
 <body>
 
-  <div ng-controller="dataMapsCtrl">
+  <div ng-controller="dataMapsCtrl" id="map-container">
     <world-map countries="countriesData"></world-map>
-    <button ng-click="colourGbr()">Such colour</button>
   </div>
 
   <div ng-controller="sliderCtrl">
