--- a/app/index.html
+++ b/app/index.html
@@ -15,16 +15,15 @@
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
   <script src="bower_components/d3/d3.js"></script>
   <script src="bower_components/topojson/topojson.js"></script>
-  <script src="bower_components/datamaps/dist/datamaps.world.min.js"></script>
+  <script src="homebrew-datamaps/datamaps.world.js"></script>
 </head>
 <body>
 
-  <div ng-controller="dataMapsCtrl">
+  <div ng-controller="dataMapsCtrl" id='map'>
     <world-map countries="countriesData"></world-map>
-    <button ng-click="colourGbr()">Such colour</button>
   </div>
 
-  <div ng-controller="sliderCtrl">
+  <div id='controls' class='panel' ng-controller="sliderCtrl">
     <div colour-slider time-axis-position="timeAxisPosition"></div>
   </div>
 
