Added thing to watch date

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,8 @@
     <world-map countries="countriesData"></world-map>
   </div>
 
-  <div ng-controller="sliderCtrl">
+  <div ng-controller="sliderCtrl as slider">
+    <div class='date-display'></div>
     <div colour-slider time-axis-position="timeAxisPosition"></div>
   </div>
 
