--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
 
   <div id='controls' class='panel' ng-controller="sliderCtrl">
     <div class="date-text">{{sliderTimeDescription}}</div>
-    <time-slider time-axis-position="timeAxisPosition" slider-position="sliderPosition"></time-slider>
+    <time-slider slider-position="sliderPosition"></time-slider>
   </div>
 
   <!--[if lt IE 7]>
