--- a/app/index.html
+++ b/app/index.html
@@ -19,13 +19,35 @@
 </head>
 <body>
 
-  <div ng-controller="dataMapsCtrl" id="map-container">
-    <world-map countries="countriesData"></world-map>
+  <div id='splash'>
+
+    <div ng-controller="dataMapsCtrl" id="map-container">
+      <world-map countries="countriesData"></world-map>
+    </div>
+
+    <div id='controls' class='panel' ng-controller="sliderCtrl">
+      <div class="date-text">{{sliderTimeDescription}}</div>
+      <time-slider time-axis-position="timeAxisPosition" slider-position="sliderPosition"></time-slider>
+    </div>
+
+    <div id='title' class='panel'>
+      <h1>When do countries commit the most?</h1>
+      <p>We took a week's worth of commits from the <a href='http://githubarchive.org'>GitHub Archive</a> and found out where they came from and when they were done. Countries are coloured based on how many commits were done, relative to the country's maximum commits per hour.</p>
+      <p><a href='#more'>More information</a></p>
+    </div>
+
   </div>
 
-  <div id='controls' class='panel' ng-controller="sliderCtrl">
-    <div class="date-text">{{sliderTimeDescription}}</div>
-    <time-slider time-axis-position="timeAxisPosition" slider-position="sliderPosition"></time-slider>
+  <div id='page'>
+    <a name='more'></a>
+
+    <h1>When do countries commit the most?</h1>
+
+    <p>We took a week's worth of commits from the <a href='http://githubarchive.org'>GitHub Archive</a> and found out where they came from and when they were done. Countries are coloured based on how many commits were done, relative to the country's maximum commits per hour.</p>
+
+    <p>Data processing was completed with <a href='https://www.python.org/'>Python</a> and <a href='http://www.sqlite.org/'>SQLite</a>. The data is available in JSON format <a href='https://github.com/AsgardEnterprises/ChronoCommit/blob/master/app/assets/hourly_commits.json'>on our GitHub</a>. The visualisation uses <a href='http://datamaps.github.io/'>Datamaps</a> with support from <a href='https://angularjs.org/'>AngularJS</a>.
+
+    <p>This visualisation was created as part of the <a href='https://github.com/blog/1864-third-annual-github-data-challenge'>Third Annual GitHub Data Challenge</a> because GitHub is awesome and so are public data sets. The project is on <a href='https://github.com/AsgardEnterprises/ChronoCommit'>GitHub</a> and we encourage you to poke around the code and contribute!</p>
   </div>
 
   <!--[if lt IE 7]>
