Get an example with time in action. TODO: fix this so it will work when crossing page boundaries.

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
 
   <div id='splash'>
     <div ng-controller="dataMapsCtrl" id="map-container">
-      <world-map countries="countriesData"></world-map>
+      <world-map countries="countriesData" current-hour="currentHour"></world-map>
     </div>
 
     <div id='controls' class='panel' ng-controller="sliderCtrl">
