Seperated out portions of index.html

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
   <script src="bower_components/topojson/topojson.js"></script>
   <script src="bower_components/smooth-scroll/dist/js/smooth-scroll.min.js"></script>
   <script src="homebrew-datamaps/datamaps.world.js"></script>
+  <script src="bower_components/jquery/dist/jquery.min.js"></script>
 </head>
 <body>
 
@@ -48,8 +49,6 @@
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
-  <script>
-    smoothScroll.init({speed: 500, updateURL: false, easing: 'easeInCubic'});
-  </script>
+  <javascript-inits></javascript-inits>
 </body>
 </html>
