--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
   <link rel="stylesheet" href="css/app.css"/>
+  <link rel="stylesheet" href="bower_components/ngDialog/css/ngDialog.css">
+  <link rel="stylesheet" href="bower_components/ngDialog/css/ngDialog-theme-default.css">
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
   <script src="bower_components/d3/d3.js"></script>
   <script src="bower_components/topojson/topojson.js"></script>
@@ -22,14 +24,13 @@
 
   <div id='splash'>
     <div ng-controller="dataMapsCtrl" id="map-container">
-      <world-map countries="countriesData"></world-map>
+      <world-map countries="countriesData" country-clicked="countryClick"></world-map>
     </div>
 
     <div id='controls' class='panel' ng-controller="sliderCtrl">
       <div class="date-text">{{sliderTimeDescription}}</div>
       <time-slider slider-position="sliderPosition"></time-slider>
     </div>
-
     <div id='title' class='panel'>
       <h1>When do countries commit the most?</h1>
       <p>We took a week's worth of commits from the <a href='http://githubarchive.org'>GitHub Archive</a> and found out where they came from and when they were done. Countries are coloured based on how many commits were done, relative to the country's maximum commits per hour.</p>
@@ -49,6 +50,10 @@
     <p>This visualisation was created as part of the <a href='https://github.com/blog/1864-third-annual-github-data-challenge'>Third Annual GitHub Data Challenge</a> because GitHub is awesome and so are public data sets. The project is on <a href='https://github.com/AsgardEnterprises/ChronoCommit'>GitHub</a> and we encourage you to poke around the code and contribute!</p>
   </div>
 
+  <div ng-controller='popupCtrl'>
+      <button type="button" ng-click='open()' >Popup!</button>
+  </div>
+
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
@@ -56,7 +61,8 @@
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
-  <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/angular/angular.js"></script> 
+  <script src="bower_components/ngDialog/js/ngDialog.min.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
