--- a/app/index.html
+++ b/app/index.html
@@ -15,11 +15,10 @@
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
   <script src="bower_components/d3/d3.js"></script>
   <script src="bower_components/topojson/topojson.js"></script>
-  <script src="bower_components/smooth-scroll/dist/js/smooth-scroll.min.js"></script>
+  <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="homebrew-datamaps/datamaps.world.js"></script>
 </head>
 <body>
-
   <div id='splash'>
     <div ng-controller="dataMapsCtrl" id="map-container">
       <world-map countries="countriesData"></world-map>
@@ -34,6 +33,7 @@
   </div>
 
   <project-description></project-description>
+</div>
 
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -48,6 +48,6 @@
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
-  <javascript-inits></javascript-inits>
+  
 </body>
 </html>
