Included script file which I forgot to put in before. Spoops!

--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,10 @@
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
+  <script src="js/generic-functions.js"></script>
+  <script>
+      smoothScroll.init({speed: 500, updateURL: false, easing: 'easeInCubic'});
+  </script>
   <javascript-inits></javascript-inits>
 </body>
 </html>
