CountryPromise is called in popupController

--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
 
   <div id='splash'>
     <div ng-controller="dataMapsCtrl" id="map-container">
-      <world-map countries="countriesData" country-clicked="countryClick"></world-map>
+      <world-map countries="countriesData" country-clicked="selectedCountry"></world-map>
     </div>
 
     <div id='controls' class='panel' ng-controller="sliderCtrl">
