--- a/app/index.html
+++ b/app/index.html
@@ -43,15 +43,12 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
   <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/angular-scroll/angular-scroll.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
   <script src="js/generic-functions.js"></script>
-  <script>
-      smoothScroll.init({speed: 500, updateURL: false, easing: 'easeInCubic'});
-  </script>
-  <javascript-inits></javascript-inits>
 </body>
 </html>
