CountryGraph directive has access to selected country data

--- a/app/js/countryPopup.html
+++ b/app/js/countryPopup.html
@@ -1,6 +1,8 @@
-<div class="ngdialog-message" ng-controller='popupCtrl'>
-	<div>
-		<h2>Country data for Estonia, the best country</h2>
+<div>
+	<div class="ngdialog-message">
+		<div>
+			<h2>Country data for Estonia, the best country</h2>
+		</div>
 	</div>
+	<country-graph country='country'></country-graph>
 </div>
-<country-graph country="countryData"></country-graph>
