--- a/app/index.html
+++ b/app/index.html
@@ -49,6 +49,6 @@
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
-  <script src="js/generic-functions.js"></script>
+  <script src="js/generic-utilities.js"></script>
 </body>
 </html>
