Country chart svg fills the whole popup

--- a/app/js/countryPopup.html
+++ b/app/js/countryPopup.html
@@ -1,4 +1,4 @@
-<div>
+<div class="popup-container">
 	<div class="ngdialog-message">
 		<div>
 			<h2>Country data for Estonia, the best country</h2>
