--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="css/app.css"/>
   <link rel="stylesheet" href="bower_components/ngDialog/css/ngDialog.css">
   <link rel="stylesheet" href="bower_components/ngDialog/css/ngDialog-theme-default.css">
+  <link rel="stylesheet" href="bower_components/nvd3/nv.d3.css">
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
   <script src="bower_components/d3/d3.js"></script>
   <script src="bower_components/topojson/topojson.js"></script>
@@ -47,6 +48,7 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/ngDialog/js/ngDialog.min.js"></script>
   <script src="bower_components/angular-scroll/angular-scroll.js"></script>
+  <script src="bower_components/nvd3/nv.d3.min.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
