--- a/app/js/countryPopup.html
+++ b/app/js/countryPopup.html
@@ -1,7 +1,7 @@
 <div class="popup-container">
 	<div class="ngdialog-message">
 		<div>
-			<h2>Country data for Estonia, the best country</h2>
+			<h2>Commits by country</h2>
 		</div>
 	</div>
 	<country-graph country='country'></country-graph>
