--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,8 @@
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
   <script src="bower_components/d3/d3.js"></script>
   <script src="bower_components/topojson/topojson.js"></script>
+  <script src="bower_components/moment/moment.js"></script>
+  <script src="bower_components/underscore/underscore.js"></script>
   <script src="homebrew-datamaps/datamaps.world.js"></script>
 </head>
 <body>
